# rsharp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  PRODUCTION_STATUS.md  README.md  Rsharp.toml  resources.rc
.github/linguist/: RSharp.yml  languages.yml
.github/linguist/samples/R#/: comptime.rsl  hello.rsl  ownership.rsl
.github/workflows/: ci.yml
compiler/codegen/: llvm_backend.cpp  llvm_backend.h
compiler/compat/: platform.h
compiler/error/: diagnostic.c  diagnostic.h
compiler/ir/: ir.h
compiler/lexer/: lexer.c  lexer.h
compiler/ownership/: ownership.c  ownership.h
compiler/parser/: ast.h  parser.c  parser.h
compiler/sema/: sema.c  sema.h
docs/: ARCHITECTURE.md  CHANGELOG.md  INSTALL_WINDOWS.md  LANGUAGE_GUIDE.md  PACKAGES.md  RSHARP_SPEC.md
examples/: fib.rss  hello.rss  hello_world.rsl  ownership.rss
examples/showcase/: async_concurrency.rsl  enums_match.rsl  error_handling.rsl  ffi_c_interop.rsl  fizzbuzz.rsl  generics_comptime.rsl  hello_short.rsl  hello_world.rsl  ownership.rsl  smart_pointers.rsl  structs_methods.rsl
github-linguist/: README.md  languages.yml
github-linguist/samples/R#/: fizzbuzz.rsl
runtime/ffi/: ffi.h
runtime/interpreter/: interpreter.py
runtime/memory/: arena.c  arena.h
stdlib/algo/: algo.rsl
stdlib/collections/: collections.rsl  deque.rsl  linked_list.rsl  map.rsl  priority_queue.rsl  set.rsl  vec.rsl
stdlib/core/: arena.rsl  core.rsl  core.rss  option.rsl  result.rsl
stdlib/io/: io.rsl
stdlib/math/: math.rsl
stdlib/path/: path.rsl
stdlib/smart_ptr/: arc.rsl  box.rsl  rc.rsl
stdlib/sync/: sync.rsl
stdlib/time/: time.rsl
tests/integration/: arithmetic.rsl  enums.rsl  error_handling.rsl  hello.rsl  run_tests.py  structs.rsl
tests/interpreter/: test_interpreter.py
tests/unit/: test_lexer.c  test_ownership.c  test_parser.c  test_sema.c
tools/rsc/: main.c
tools/rsdoc/: main.c
tools/rsfmt/: main.c
tools/rsl/: main.c
tools/rsrun/: main.c
wrapper/: windres
